--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
