--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-react-swc": "^3.6.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
