--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.67",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
